# cuik-molmaker

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  License.txt  README.md  pyproject.toml  setup.cfg  setup.py
LICENSE/: third-party.txt
cmake/: FetchCatch2.cmake
cmake/Catch2/: Catch.cmake
data/: README.md  best_normalization_params.json  descriptastorus_normalization_params.json  fast_normalization_params.json
docs/: BUILD.md  FEATURES.md  TESTING.md  USAGE.md
scripts/: check_and_install_cuik_molmaker.py
src/: __init__.py  cuik_molmaker_cpp.cpp  features.cpp  features.h  float_features.cpp  float_features.h  mol_features.py  one_hot.cpp  one_hot.h
src/utils/: __init__.py  descriptor_normalization.py  fit_distribution.py
tests/cpp/catch2/: README.md  test_features.cpp
tests/data/: rdkit2D_best_normalization_ref.npy  rdkit2D_desc.csv  rdkit2D_descriptastorus_normalization_ref.npy  rdkit2D_fast_normalization_ref.npy  rdkit2D_none_normalization_ref.npy  sample_smiles_100.csv  sample_smiles_100_ORGANIC_ref.xz  sample_smiles_100_V1_ref.xz  sample_smiles_100_V2_ref.xz  sample_smiles_100_batch_ORGANIC_ref.xz  sample_smiles_100_batch_V1_ref.xz  sample_smiles_100_batch_V2_ref.xz
tests/python/: conftest.py  test_features.py  test_featurize_dims.py  test_fit_distribution.py  test_float_features.py  test_mol_features.py
